--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,11 @@
   --breakpoint-nav: 950px;
 }
 
+body {
+  @apply bg-white dark:bg-gray-950;
+  @apply transition-colors duration-300 ease-in-out;
+}
+
 .theme-yellow {
   --color-primary-400: #facc15;
   --color-primary-500: #eab308;
